@@ -15,7 +15,7 @@
 %%  when \code{prod(dim(.))} is larger than \eqn{2^{31} - 1}.
 %
 
-\section{Changes in version 1.3-2 (2022-12-28 r33..)}{
+\section{Changes in version 1.3-2 (2022-12-28 r3357)}{
   \subsection{Bug Fixes}{
     \itemize{
       \item \code{rankMatrix()} tweaks for the singular values based methods,
@@ -25,6 +25,8 @@
       C-level \code{diagU2N()} now also works for 0-dimensional triangular
       matrices; this also fixes a subsetting (\dQuote{indexing}) bug of
       such 0-dimensional matrices, thanks to a report by Aaron Lun.
+
+      \item logical subsetting of 0-dim. (diagonal/triangular) matrices fixes.
     }
   }
 }
